--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       </section>
       <img
         class="apresentacao__imagem"
-        src="./assets/imagem.png"
+        src="./assets/fotoPerfil.png"
         alt="Foto de Ravel Medeiros"
       />
     </main>
