--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
       <img
         class="apresentacao__imagem"
-        src="./assets/imagem.png"
+        src="./assets/fotoPerfil.png"
         alt="Foto de Ravel Medeiros"
       />
     </main>
