Alteração posição da imagem em mobile

--- a/about.html
+++ b/about.html
@@ -36,15 +36,11 @@
           "A falha sempre foi minha melhor mentora." 🏆
         </p>
       </section>
-      <img
-        class="apresentacao__imagem"
-        src="./assets/fotoPerfil.png"
-        alt="Foto de Ravel Medeiros"
-      />
     </main>
 
     <footer class="rodape">
       <p>Desenvolvido por Ravel M. 👨🏽‍💻</p>
     </footer>
   </body>
+  <script src="index.js"></script>
 </html>
