--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@
           </a>
         </div>
       </section>
-      <img
-        class="apresentacao__imagem"
-        src="./assets/fotoPerfil.png"
-        alt="Foto de Ravel Medeiros"
-      />
     </main>
     <footer class="rodape">
       <p>Desenvolvido por Ravel M. 👨🏽‍💻</p>
     </footer>
   </body>
+  <script src="index.js"></script>
 </html>
